alignment fix2.0 commit

--- a/src/components/FeatureItems.css
+++ b/src/components/FeatureItems.css
@@ -14,7 +14,7 @@
     padding: 30px 80px;
     /* padding-bottom: 70px !important; */
     display: flex;
-    min-height: 350px;
+    min-height: 320px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -25,8 +25,8 @@
     font-size: 1.3rem !important;
     letter-spacing: 1.5px;
     font-family: "SF";
-    margin-top: 0px;
-    margin-bottom: 7px;
+    margin-top: 5px;
+    margin-bottom: 15px;
     width: 70%;
     /* border: 1px dashed gray; */
     height: 12%;
